# polybot

./: README.md  pyproject.toml
src/polybot/: __main__.py
src/polybot/keysmash/: markov.py
